[gd_scene load_steps=19 format=3 uid="uid://csbiyn71rn7fe"]

[ext_resource type="Script" path="res://scene/item/mine.gd" id="1_qowrp"]
[ext_resource type="Texture2D" uid="uid://cmecg2onuseg" path="res://assets/item/2D Health & Ammo Pickups v6.2/32px/fish_mine.png" id="2_70el6"]
[ext_resource type="Texture2D" uid="uid://dqvmneppxg0o3" path="res://assets/environment/scifi/anims/confettitestparticle.png" id="3_ntp4b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x2s5f"]
size = Vector2(27, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aqc3"]
atlas = ExtResource("2_70el6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn376"]
atlas = ExtResource("2_70el6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_87xlo"]
atlas = ExtResource("2_70el6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_150k1"]
atlas = ExtResource("2_70el6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7g2o"]
atlas = ExtResource("2_70el6")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4j4ib"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aqc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn376")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87xlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_150k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7g2o")
}],
"loop": true,
"name": &"blue",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_hjff3"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"blue", &"blue"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.75, 0)]
}

[sub_resource type="Animation" id="Animation_piy51"]
resource_name = "blue_balloo"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"blue"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 1.1, 2.1, 3.1, 4, 5.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.75, 0), Vector2(4, -1), Vector2(-2, 0), Vector2(-1.19209e-07, 3), Vector2(2, -1), Vector2(3, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wl4ny"]
_data = {
"RESET": SubResource("Animation_hjff3"),
"blue_balloon": SubResource("Animation_piy51")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_b5qps"]

[sub_resource type="Gradient" id="Gradient_fpwm6"]
offsets = PackedFloat32Array(0, 0.338384, 0.621212, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.737437, 0.159362, 1.92523e-07, 1, 0.824561, 0.549079, 0.00772229, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8tbb3"]
gradient = SubResource("Gradient_fpwm6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lq2av"]
lifetime_randomness = 0.03
particle_flag_disable_z = true
direction = Vector3(1, 1, 0)
spread = 180.0
gravity = Vector3(0, 5, 0)
initial_velocity_min = 5.0
initial_velocity_max = 75.0
angular_velocity_min = 15.0
angular_velocity_max = 20.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color_ramp = SubResource("GradientTexture1D_8tbb3")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryb26"]
size = Vector2(40, 20)

[node name="mine" type="CharacterBody2D"]
position = Vector2(0, 15)
scale = Vector2(0.5, 0.5)
collision_layer = 0
script = ExtResource("1_qowrp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -4.5)
shape = SubResource("RectangleShape2D_x2s5f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.75, 0)
scale = Vector2(0.97619, 1)
sprite_frames = SubResource("SpriteFrames_4j4ib")
animation = &"blue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wl4ny")
}

[node name="pop_damage" type="Area2D" parent="."]
visible = false
collision_mask = 193
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="pop_damage"]
scale = Vector2(7.2979, 6.57288)
shape = SubResource("CircleShape2D_b5qps")

[node name="confetti" type="GPUParticles2D" parent="."]
emitting = false
amount = 250
process_material = SubResource("ParticleProcessMaterial_lq2av")
texture = ExtResource("3_ntp4b")
lifetime = 1.3
one_shot = true
speed_scale = 2.0
explosiveness = 0.2
randomness = 0.85

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 193

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, -8)
shape = SubResource("RectangleShape2D_ryb26")

[connection signal="body_entered" from="pop_damage" to="." method="_on_pop_damage_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
